applications/casdoor/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: casdoor
spec:
  parentRefs:
    - group: gateway.networking.k8s.io	
      kind: ListenerSet
      name: casdoor
  hostnames:
    - casdoor.open.jynolen.fr
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: casdoor
          port: 8000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
